chore(final): final commit with all of the fixed patches
